# tejasbubane.github.io

./: .gitignore  .gitmodules  README.md  about.html  app.css  atom.xml  config.toml  contact.html  contact.markdown  even.js  index.html  robots.txt  rss.xml  search_index.en.js  setup.html  setup.markdown  site.css  site.hs  sitemap.xml  stack.yaml  tejasbubane-github-io.cabal
_site/: about.html  app.css  index.html  setup.html
archive/: index.html
books/: index.html
content/: 2019-01-21-serializers-everywhere.md  2019-10-02-functor-composition.md  2019-11-12-unit-testing-rack-middleware.md  2020-04-22-redis-connection-pool-in-rails.md  2021-01-17-refactoring-filters.md  2021-02-22-currying-redux.md  2021-10-23-complete-testing-sidekiq.md  2021-12-18-rails-7-postgres-generated-columns.md  2022-05-29-sidekiq-exception-handling.md  2022-11-08-spotting-flaky-tests.md  2024-10-11-redis-pipelines.md  2024-11-07-caching-optimizations.md  2024-12-24-caching-optimizations.md  2025-01-03-rspec-custom-matchers.md  2025-01-31-arbitrary-handling-or-mock-arguments-in-rspec.md  2025-03-25-postgres-constraints-in-rails.md  2025-03-27-ruby-pattern-matching-custom-object.md  2025-04-11-ip-restrict-rack-app-per-account.md  2025-04-16-ip-restrict-rack-app-per-account.md  2025-12-04-rails-pluralize-translate.md  2026-05-30-rate-limit-rack-app-per-account.md  2026-06-03-rails-rate-limit-upcoming-changes.md  2026-06-28-distributive-union-types.md  2026-07-04-distributive-union-types.md  setup.md
css/: _base.scss  _variables.scss  fancybox-3.1.20.scss  pygments.scss  style.scss  (+1 more)
(+93 files in other folders)
