name:               tejasbubane-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , hjsmin == 0.2.0.2
                  , language-javascript == 0.6.0.11
                  , bytestring
  ghc-options:      -threaded
  default-language: Haskell2010
